Static site (2014-07-23 shi)
==============================
Added new column in Dash quality for datasets


Static site (2014-06-25 shi)
==============================
Added Dash to About page
Translations for new Dash section


Static site (2014-06-10 shi)
==============================
Add "coming soon" to Install section + translations


Static site (2014-05-30 shi)
==============================
Front page layout changes
Include country flags and country codes
News page background lightened


Static site (2014-05-29 shi)
==============================
Changed all links to News page to direct link (bug fix)
Translations for navigation links on Index, About, News page


Static site (2014-05-28 shi)
==============================
News header
Added news post
No themes
CSS Styles for path buttons
Changed about page text / css styles
Translations for new about page
Added "quick install" section
Changed footer links to mailto:queries@d-portal.org
Changed all links to relative for translations
Added News link to about page
Added new navigation to News page


Static site (2014-05-08 shi)
==============================
News styles
Added news translations (not entries)
Added Git-flavoured Markdown for news entries
linebreaks for Markdown
Title links to main page


Static site (2014-05-01 shi)
==============================
Added 2 pages for news (single / list)


Static site (2014-04-30 shi)
==============================
Added Spanish, Hindi, Japanese, Chinese (Simplified) translations
Added news page


Static site (2014-04-29 shi)
==============================
Rewrite html for static site
Contents are now up for translations
Added French translation
No more inline css