@@ -30,6 +30,7 @@ strong, b, .bold		{font-weight:bold; color:inherit;}
 #background_image	 	{width:100%; height:100%; position:fixed; top:0; left:0; z-index:-1; background-image:url('/art/mexico_background_image.jpg'); background-repeat:no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
 .overlay				{width:100%; height:100%; background-color:rgba(19, 16, 1, 0.6);}	/* Overlay colour for background image */
 .default				{width:960px; margin:0 auto; padding:0; position:relative;}
+.default.pad40			{padding:40px 0;}
 .default.center			{text-align:center;}
 .third					{display:inline-block; vertical-align:top; width:300px; padding-right:30px;}
 .third:last-of-type		{padding:0;}
