@@ -15,25 +15,8 @@
 			<div class="default center">
 				<img src="{root}art/dp_logo.index.png" width="600" height="250" alt="D-Portal logo"/>
 				<div class="tongue_wrap">{tongue_select}</div>
-				<div class="tag">{tagline_text}</div>
-				<div class="default pad40">
-					<div class="third">
-						<a class="path no">
-							<span class="path_title install">{install_button_text}</span>
-							<span class="path_txt">{install_info_text} <i>{soon_text}</i></span>
-						</a>
-					</div><div class="third">
-						<a href="#explore" class="path">
-							<span class="path_title explore">{explore_button_text}</span>
-							<span class="path_txt">{explore_info_text}</span>
-						</a>
-					</div><div class="third">
-						<a href="https://github.com/devinit/D-Portal" target="_blank" class="path">
-							<span class="path_title develop">{develop_button_text}</span>
-							<span class="path_txt">{develop_info_text}</span>
-						</a>
-					</div>
-				</div>
+				<div class="tag">{publishers_tagline_text}</div>
+				
 				<div class="description_wrap">
 					<div class="description">
 						<span class="title">{index_title_text}</span>
