@@ -13,6 +13,9 @@ d-portal.org还处于非常早期的开发，定于四月中旬Alpha版本。感
 #tagline_text
 帮助您了解开发数据。
 
+#publishers_tagline_text
+发行版
+
 #install_button_text
 发行人
 
