@@ -13,6 +13,9 @@ Top
 #tagline_text
 Helping you understand development data.
 
+#publishers_tagline_text
+Publisher Edition
+
 #install_button_text
 Install
 
