@@ -13,6 +13,9 @@ Haut
 #tagline_text
 Vous aider à comprendre les données de développement.
 
+#publishers_tagline_text
+Éditeur Edition
+
 #install_button_text
 éditeur
 
