@@ -13,6 +13,9 @@ d-portal.org अप्रैल के मध्य अल्फा रिली
 #tagline_text
 आप विकास डेटा को समझने में मदद करना.
 
+#publishers_tagline_text
+प्रकाशक संस्करण
+
 #install_button_text
 प्रकाशक
 
