@@ -13,6 +13,9 @@ d-portal.org はアルファリリース中旬4月に予定され、非常に初
 #tagline_text
 あなたは、開発データを理解に役立ちます。
 
+#publishers_tagline_text
+出版社版
+
 #install_button_text
 インストール
 
