@@ -13,6 +13,9 @@ Superior
 #tagline_text
 Ayudar a comprender los datos de desarrollo.
 
+#publishers_tagline_text
+Editorial edición
+
 #install_button_text
 Editor
 
