@@ -1,3 +1,9 @@
+Static site (2014-07-29 shi)
+==============================
+Fixed CSS for index
+Added publishers portal index page
+
+
 Static site (2014-07-23 shi)
 ==============================
 Added new column in Dash quality for datasets
